--- a/logstash/pipeline/django.conf
+++ b/logstash/pipeline/django.conf
@@ -4,7 +4,7 @@ input {
         port => 1026
         mode => "server"
         type => "django"
-        codec => json
+        codec => json_lines {}
   }
 }
 
