--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       #- /home/proxy_logs:/home/proxy_logs:ro
     ports:
       - "1025:1025/udp"
+      - "1026:1026/tcp"
       - "5000:5000"
       - "9600:9600"
     environment:
@@ -37,7 +38,16 @@ services:
       - "5601:5601"
     depends_on:
       - elasticsearch
+  portainer:
+    container_name: portainer
+    image: portainer/portainer
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    ports:
+      - "9000:9000"
 
 volumes:
+  portainer_data:
   elasticsearch:
     driver: local
