--- a/logstash/config/logstash.yml
+++ b/logstash/config/logstash.yml
@@ -1,3 +1,5 @@
 ## Default Logstash configuration.
 http.host: "0.0.0.0"
 path.config: /usr/share/logstash/pipeline
+log.level: debug
+config.debug: true
