--- a/logstash/pipeline/django.conf
+++ b/logstash/pipeline/django.conf
@@ -3,7 +3,7 @@ input {
   tcp {
         port => 1026
         mode => "server"
-        type => "python-logstash"
+        type => "django"
         codec => json_lines {}
   }
 }
@@ -13,6 +13,6 @@ output {
     stdout { codec => rubydebug }
     elasticsearch {
         hosts => "elasticsearch:9200"
-        index => "python-logstash"
+        index => "django"
     }
 }
