--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,2 +1,3 @@
 # https://github.com/elastic/logstash-docker
 FROM docker.elastic.co/logstash/logstash-oss:6.6.0
+RUN yum update && yum install vim -y
