--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,13 +44,13 @@ services:
     depends_on:
       - elasticsearch
   portainer:
-    container_name: portainer
+    container_name: elk_portainer
     image: portainer/portainer
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
     ports:
-      - "9000:9000"
+      - "9001:9001"
 
 volumes:
   portainer_data:
