--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -1,9 +1,13 @@
 input {
-  udp {
-        port => 1025
-        queue_size => 50000
-        type => "nginx"
+beats {
+    port => 5044
   }
+
+  #udp {
+  #      port => 1025
+  #      queue_size => 50000
+  #      type => "nginx"
+  #}
 }
 filter {
     grok {
