--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -1,13 +1,9 @@
 input {
-beats {
-    port => 1025
+  udp {
+        port => 1025
+        queue_size => 50000
+        type => "nginx"
   }
-
-  #udp {
-  #      port => 1025
-  #      queue_size => 50000
-  #      type => "nginx"
-  #}
 }
 filter {
     grok {
