--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -8,9 +8,9 @@ input {
 filter {
     grok {
         match => {
-            "message" => "%{IPORHOST:[nginx][access][remote_ip]} - %{DATA:[nginx][access][user_name]} \[%{HTTPDATE:[nginx][access][time]}\]\"%{WORD:[nginx][access][method]} %{DATA:[nginx][access][url]} HTTP/%{NUMBER:[nginx][access][http_version]}\" %{NUMBER:[nginx][access][response_code]} %{NUMBER:[nginx][access][body_sent][bytes]}\"%{DATA:[nginx][access][referrer]}\" \"%{DATA:[nginx][access][agent]}\"\"%{NUMBER:[nginx][access][request_time]}\" \"%{NUMBER:[nginx][access][upstream_connect_time]}\""
+            "message" => ""
         }
-        remove_field => "message"
+        remove_field => "%{NGINX_ACCESS}"
     }
     mutate {
         add_field => { "read_timestamp" => "%{@timestamp}" }
