--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -7,10 +7,11 @@ input {
 }
 filter {
     grok {
+        patterns_dir => "/usr/share/logstash/patterns"
         match => {
-            "message" => ""
+            "message" => "%{NGINX_ACCESS}"
         }
-        remove_field => "%{NGINX_ACCESS}"
+        remove_field => "message"
     }
     mutate {
         add_field => { "read_timestamp" => "%{@timestamp}" }
