--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -11,7 +11,11 @@ filter {
         match => {
             "message" => "%{NGINX_ACCESS}"
         }
-        remove_field => "message"
+        remove_tag => ["nginx_access", "_grokparsefailure"]
+        add_field => {
+                "type" => "nginx_access"
+        }
+        remove_field => ["program", "message"]
     }
     mutate {
         add_field => { "read_timestamp" => "%{@timestamp}" }
