logstash if statement

--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -6,33 +6,63 @@ input {
   }
 }
 filter {
+
+
+
+
+if [program] == "nginx_access" {
     grok {
-        patterns_dir => "/usr/share/logstash/patterns"
-        match => {
-            "message" => "%{NGINX_ACCESS}"
+            patterns_dir => "/usr/share/logstash/patterns"
+            match => {
+                "message" => "%{NGINX_ACCESS}"
+            }
+            remove_tag => ["nginx_access", "_grokparsefailure"]
+            add_field => {
+                    "type" => "nginx_access"
+            }
+            remove_field => ["program", "message"]
         }
-        remove_tag => ["nginx_access", "_grokparsefailure"]
-        add_field => {
-                "type" => "nginx_access"
+        mutate {
+            add_field => { "read_timestamp" => "%{@timestamp}" }
         }
-        remove_field => ["program", "message"]
-    }
-    mutate {
-        add_field => { "read_timestamp" => "%{@timestamp}" }
-    }
-    date {
-        match => [ "[nginx][access][time]", "dd/MMM/YYYY:H:m:s Z" ]
-        remove_field => "[nginx][access][time]"
-    }
-    useragent {
-        source => "[nginx][access][agent]"
-        target => "[nginx][access][user_agent]"
-        remove_field => "[nginx][access][agent]"
-    }
-    geoip {
-        source => "[nginx][access][remote_ip]"
-        target => "[nginx][access][geoip]"
+        date {
+            match => [ "[nginx][access][time]", "dd/MMM/YYYY:H:m:s Z" ]
+            remove_field => "[nginx][access][time]"
+        }
+        useragent {
+            source => "[nginx][access][agent]"
+            target => "[nginx][access][user_agent]"
+            remove_field => "[nginx][access][agent]"
+        }
+        geoip {
+            source => "[nginx][access][remote_ip]"
+            target => "[nginx][access][geoip]"
+          }
+  }
+
+  if [program] == "nginx_error" {
+    grok {
+      patterns_dir => "/etc/logstash/patterns"
+      match => { "message" => "%{NGINX_ERROR}" }
+      remove_tag => ["nginx_error", "_grokparsefailure"]
+      add_field => {
+        "type" => "nginx_error"
       }
+      remove_field => ["program"]
+    }
+
+    date {
+      match => ["time_local", "YYYY/MM/dd HH:mm:ss"]
+      target => "@timestamp"
+      remove_field => "time_local"
+    }
+  }
+
+
+
+
+
+
 }
 
 output {
