--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -42,7 +42,7 @@ if [program] == "nginx_access" {
 
   if [program] == "nginx_error" {
     grok {
-      patterns_dir => "/etc/logstash/patterns"
+      patterns_dir => "/usr/share/logstash/patterns"
       match => { "message" => "%{NGINX_ERROR}" }
       remove_tag => ["nginx_error", "_grokparsefailure"]
       add_field => {
