nginx_template2.json

--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -70,5 +70,8 @@ output {
     elasticsearch {
         hosts => "elasticsearch:9200"
         index => "nginx"
+        manage_template => true
+        template_overwrite => true
+        template => "/usr/share/logstash/config/nginx_template2.json"
     }
 }
