--- a/logstash/pipeline/nginx.conf
+++ b/logstash/pipeline/nginx.conf
@@ -69,9 +69,6 @@ output {
     stdout { codec => rubydebug }
     elasticsearch {
         hosts => "elasticsearch:9200"
-        index => "logstash-%{+YYYY.MM.dd}"
-        manage_template => true
-        template_overwrite => true
-        template => "/usr/share/logstash/config/nginx_template2.json"
+        index => "nginx"
     }
 }
